adding in new planets to scrape homepage

--- a/python_practice/webscrape/home.html
+++ b/python_practice/webscrape/home.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Space! The Final Fart Here.<title>
+        <title>Space! The Final Fart Here.</title>
         <meta charset="utf-8">
         <meta name="keywords" content="html tutorial template">
     </head>
+    
     <body>
         <h1>Welcome to my space website!</h1>
 
@@ -14,6 +15,33 @@
             </div>
             <div class = "card-body">
                 <h5 class = "card-title">The Swift Planet</h5>
+                <p class = "card-text"></p>
+            </div>
+        </div>
+        <div class = "card" id = "second-planet">
+            <div class = "card-header">
+                Venus
+            </div>
+            <div class = "card-body">
+                <h5 class = "card-title">The Morning Star</h5>
+                <p class = "card-text"></p>
+            </div>
+        </div>
+        <div class = "card" id = "third-planet">
+            <div class = "card-header">
+                Earth
+            </div>
+            <div class = "card-body">
+                <h5 class = "card-title">The Blue Planet</h5>
+                <p class = "card-text"></p>
+            </div>
+        </div>
+        <div class = "card" id = "not-planet">
+            <div class = "card-header">
+                Moon
+            </div>
+            <div class = "card-body">
+                <h5 class = "card-title">Luna</h5>
                 <p class = "card-text"></p>
             </div>
         </div>
