Adding tableau stuff

--- a/SMU_Vizz_Portfolio/Web/D3.html
+++ b/SMU_Vizz_Portfolio/Web/D3.html
@@ -16,6 +16,7 @@
             <li id="nav-next"><a id = "ul-a" href="JS.html">JavaScript</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3.html">D3</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3Vizz.html">D3Visuals</a></li>
+            <li id="nav-next"><a id = "ul-a" href="tableau.html">Tableau</a></li>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
         <br>
