--- a/SMU_Vizz_Portfolio/Web/about.html
+++ b/SMU_Vizz_Portfolio/Web/about.html
@@ -14,6 +14,7 @@
             <li id="nav-next"><a id = "ul-a" href="JS.html">JavaScript</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3.html">D3</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3Vizz.html">D3Visuals</a></li>
+            <li id="nav-next"><a id = "ul-a" href="tableau.html">Tableau</a></li>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
         <h2 id="h2exp">This page is to tell you a little bit more about me. Feel free to check out my social media pages!</h2>
