--- a/SMU_Vizz_Portfolio/Web/tableau.html
+++ b/SMU_Vizz_Portfolio/Web/tableau.html
@@ -18,6 +18,7 @@
             <li id="nav-next"><a id = "ul-a" href="tableau.html">Tableau</a></li>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
+        <h1 class="h2d3" style="text-align: right;"><u>Embedded Tableau Visualizations & Dashboard</u></h1>
         <br>
         <div class='tableauPlaceholder' id='viz1658454975144' style='position: relative'><noscript><a href='#'><img alt='Global Sales Over Time - 2017 ' 
             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Vi&#47;VideoGames_16584548418340&#47;GlobalYears&#47;1_rss.png' style='border: none' />
