--- a/SMU_Vizz_Portfolio/Web/experience.html
+++ b/SMU_Vizz_Portfolio/Web/experience.html
@@ -14,8 +14,16 @@
             <li id="nav-next"><a id = "ul-a" href="JS.html">JavaScript</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3.html">D3</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3Vizz.html">D3Visuals</a></li>
-            <li id="nav-next"><a id = "ul-a" href="tableau.html">Tableau</a></li>
-            <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
+            <div class="dropdown">
+                <button class="dropbtn">Tableau
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                <a href="tableau.html">Global Sales</a>
+                <a href="tabdash.html">Dashboard</a>
+                <a href="#">Link 3</a>
+                </div>
+            </div>            <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
         <h2 id="h2exp">Here is a table showing some of the many tools that I have used throughout the last two years!</h2>
         <hr id="hr1">
