--- a/SMU_Vizz_Portfolio/Web/index.html
+++ b/SMU_Vizz_Portfolio/Web/index.html
@@ -14,8 +14,17 @@
             <li id="nav-next"><a id = "ul-a" href="JS.html">JavaScript</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3.html">D3</a></li>
             <li id="nav-next"><a id = "ul-a" href="D3Vizz.html">D3Visuals</a></li>
-            <li id="nav-next"><a id = "ul-a" href="tableau.html">Tableau</a></li>
-           <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
+            <div class="dropdown">
+                <button class="dropbtn">Tableau
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                <a href="tableau.html">Global Sales</a>
+                <a href="tabdash.html">Dashboard</a>
+                <a href="#">Link 3</a>
+                </div>
+            </div>
+            <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
         <h2 id="h2welcome">Welcome!</h2><img id="sfpic" src="Resources/cropped.png">
         <p>This webpage was created to showcase the many tools that I have learned over the years relating to data science. Please feel free to browse around and enjoy the webpage! Thank you for visiting!</p>
