Adding animations, as well as extras tableau tab

--- a/SMU_Vizz_Portfolio/Web/experience.html
+++ b/SMU_Vizz_Portfolio/Web/experience.html
@@ -21,7 +21,7 @@
                 <div class="dropdown-content">
                 <a href="tableau.html">Global Sales</a>
                 <a href="tabdash.html">Dashboard</a>
-                <a href="#">Link 3</a>
+                <a href="extras.html">Extras</a>
                 </div>
             </div>            <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
