--- a/SMU_Vizz_Portfolio/Web/tableau.html
+++ b/SMU_Vizz_Portfolio/Web/tableau.html
@@ -21,12 +21,14 @@
                     <div class="dropdown-content">
                     <a href="tableau.html">Global Sales</a>
                     <a href="tabdash.html">Dashboard</a>
-                    <a href="#">Link 3</a>
+                <a href="extras.html">Extras</a>
                     </div>
                 </div>
             <li id="nav-next"><a id = "ul-a" href="about.html">About</a></li>
         </ul>
+        
         <h1 class="h2d3" style="text-align: center;"><u>Embedded Tableau Visualizations</u></h1>
+      
         <br>
         <div class='tableauPlaceholder' id='viz1658454975144' style='position: relative'><noscript><a href='#'><img alt='Global Sales Over Time - 2017 ' 
             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Vi&#47;VideoGames_16584548418340&#47;GlobalYears&#47;1_rss.png' style='border: none' />
